# floppapad

./: .gitignore  .gitmodules  README.md  floppapad.kicad_pcb  floppapad.kicad_pro  floppapad.kicad_sch  floppapad2.kicad_pcb  floppapad2.kicad_sch  fp-lib-table  sym-lib-table  ~floppapad2.kicad_pcb.lck
firmware/: Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
jlcpcb/: project.db
pcb/: bigfloppa.kicad_mod  floppapad2.kicad_pro  fp-lib-table  sym-lib-table
pcb/jlcpcb/: project.db
web/: Cargo.toml  Dioxus.toml  dev.sh  package.json  tailwind.config.js
web/public/: main.css
web/src/: App.tsx  index.html  main.rs
