[package]
name = "floppapad_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
rp2040-hal = { version = "0.9", features = ["critical-section-impl"] }
rp2040-boot2 = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
usb-device = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "0.2"
ssd1306 = "0.8"
